Updated the database and supporting files for announcements
